--- a/app/web/index.html
+++ b/app/web/index.html
@@ -29,6 +29,8 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4YC0KY2WqBivTTuYzdAfdIq8S9R8L-yY"></script>
+
   <title>app</title>
   <link rel="manifest" href="manifest.json">
 
